CMS-3502 Implement GeoPoint class.